# filetype-rs

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
src/test/: mod.rs
tests/: test.rs
