[package]
name = "filetype"
version = "0.2.0"
authors = ["Skyler Hawthorne <skylerhawthorne@gmail.com>"]
description = """
This crate provides a basic extension to `std::fs::File`: it defines a method \
which returns the file's type (on *nix systems)."""
repository = "https://github.com/dead10ck/filetype-rs"
documentation = "http://dead10ck.github.io/filetype-rs/filetype/"
readme = "README.md"
keywords = [ "filetype", "file" ]
license = "MIT"

[dependencies]
nix = "*"
libc = "*"
